--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     //noinspection GradleCompatible
     compile 'com.android.support:support-v4:26.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
+
 
 }
